Removed unecessary secondary action set on createlink. Fixed alignment in modal actions

--- a/frontend/app/scss/blocks/Modal.scss
+++ b/frontend/app/scss/blocks/Modal.scss
@@ -14,10 +14,12 @@
         padding: 0 20px 0 20px;
         height: 50px;
         background-color: #F6F6F6;
-        justify-content: space-between;
+        justify-content: flex-end;
     }
 
     &__ActionsSecondary {
+        margin-right: auto;
+
         & .Modal__Action {
             margin-right: 20px;
         }
